--- a/templates/categorylist.html
+++ b/templates/categorylist.html
@@ -2,33 +2,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Work Headings</title>
+    <title>Work List</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-    <h2>My Work Headings</h2>
+    <h2>My Work Lists</h2>
 
     <div style="margin-bottom: 30px;">
         <form method="POST">
             {% csrf_token %}
-            <h3>Create a New Heading</h3>
+            <h3>Create a List</h3>
             {{ form.as_p }}
-            <button type="submit" class="btn btn-add">Add Heading</button>
+            <button type="submit" class="btn btn-add">Add List</button>
         </form>
     </div>
 
-    <hr>
+    <!-- <hr> -->
 
     <ul>
         {% for category in categories %}
         <li>
-            <a href="{% url 'tasklist' category.id %}" style="text-decoration:none; color:#2980b9; font-weight:bold;">
+            <a href="{% url 'tasklist' category.id %}" style="text-decoration:none; color:black; font-weight:bold;">
                 {{ category.name }}
             </a>
-            <a href="{% url 'deletecategory' category.id %}" class="btn btn-delete">Delete Heading</a>
+            <a href="{% url 'deletecategory' category.id %}" class="btn btn-delete">Delete list</a>
         </li>
         {% empty %}
-        <p>No headings created yet. Use the form above to start!</p>
+        <p>No lists created yet. Use the form above to start!</p>
         {% endfor %}
     </ul>
 </body>
