--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #f4f7f6;
+    font-family: 'Poppins', sans-serif;
+    background-color: rgb(255, 245, 216);
     color: #333;
     max-width: 800px;
     margin: 40px auto;
@@ -23,7 +23,7 @@ li {
     background: #fff;
     margin: 10px 0;
     padding: 15px;
-    border-radius: 8px;
+    /* border-radius: 8px; */
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     display: flex;
     justify-content: space-between;
@@ -31,13 +31,29 @@ li {
     /* color: black; */
 }
 
+
+
+
+
+
+
 .btn {
     text-decoration: none;
     padding: 8px 15px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     font-size: 14px;
     transition: 0.3s;
 }
+
+
+
+@media (min-width: 600px) {
+    button, .btn {
+        width: auto; /* Normal width on desktop */
+    }
+}
+
+
 
 .btn-add 
 { 
@@ -51,8 +67,8 @@ li {
 }
 .btn-cancel 
 {
-     background: #95a5a6; 
-     color: white; 
+     /* background: #95a5a6;  */
+     color: black; 
      margin-left: 10px; 
     }
 
@@ -60,23 +76,37 @@ form
 { 
     background: #fff; 
     padding: 20px; 
-    border-radius: 8px; 
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+    /* border-radius: 8px;  */
+    box-shadow: 0 2px 20px rgba(0,0,0,0.1); 
 }
+
+@media (min-width: 600px) {
+    li {
+        flex-direction: row; /* Side-by-side on larger screens */
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+
+
 input[type="text"], textarea 
 { 
-    width: 100%; 
-    padding: 10px; 
+    width: 90%; 
+    padding: 8px; 
     margin: 10px 0; 
     border: 1px solid #ddd; 
-    border-radius: 4px; 
+    /* border-radius: 4px;  */
 }
+
+
+
 button 
 { 
     cursor: pointer; 
     border: none; 
     padding: 10px 20px; 
-    border-radius: 5px; 
+    /* border-radius: 5px;  */
     background: black; 
     color: white; 
 }
